sort out credentials, token cache, use URI over URL